--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgb(83, 54, 211);
+    background-color: #30336b;
     display: flex;
     align-items: center;
     padding: 0 20px;
