--- a/src/Components/Header/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/Components/Header/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -1,46 +1,54 @@
 .NavigationItem {
-  margin: 10px 0;
-  box-sizing: border-box;
-  display: block;
-  width: 100%;
+    margin: 0;
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
 }
 
 .NavigationItem a {
-  color: black;
-  text-decoration: none;
-  width: 100%;
-  box-sizing: border-box;
-  display: block;
+    color: #fff;
+    text-decoration: none;
+    width: 100%;
+    box-sizing: border-box;
+    display: block;
+    justify-content: start;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+    padding: 20px;
+}
+
+.NavigationItem a:first-of-type {
+    border-top: 2px solid rgba(200, 200, 200, 0.1);
 }
 
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-  color: #40A4C8;
+    border-right: 5px solid #c210c2;
+    background-color: #fff;
+    color: #30336b;
 }
 
 @media (min-width: 600px) {
-  .NavigationItem {
-      margin: 0;
-      display: flex;
-      height: 100%;
-      width: auto;
-      align-items: center;
-  }
-  
-  .NavigationItem a {
-      height: 100%;
-      padding: 16px 10px;
-      border-bottom: 4px solid transparent;
-      color: white;
-  }
-  
-  .NavigationItem a:hover,
-  .NavigationItem a:active,
-  .NavigationItem a.active {
-      background-color: #857ab6;
-      border-bottom: 4px solid #5a1749;
-      color: black;
-      font-weight: bold;
-  }
+    .NavigationItem {
+        margin: 0;
+        display: flex;
+        height: 100%;
+        width: auto;
+    }
+
+    .NavigationItem a {
+        height: 100%;
+        padding: 16px 10px;
+        border-bottom: 4px solid transparent;
+        color: #fff;
+    }
+
+    .NavigationItem a:hover,
+    .NavigationItem a:active {
+        background-color: #fff;
+        border-bottom: 4px solid #c210c2;
+        border-right: 0;
+        color: #30336b;
+        font-weight: bold;
+    }
 }
