--- a/src/Components/Header/NavigationItems/NavigationItems.module.css
+++ b/src/Components/Header/NavigationItems/NavigationItems.module.css
@@ -1,7 +1,6 @@
-
 nav {
     height: 100%;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
 }
 .NavigationItems {
@@ -13,7 +12,7 @@ nav {
     height: 100%;
     width: 100%;
     align-items: center;
-  justify-content: start;
+    box-sizing: border-box;
 }
 
 @media (min-width: 600px) {
@@ -22,4 +21,3 @@ nav {
         justify-content: flex-end;
     }
 }
-
