--- a/src/Components/Header/SideDrawer/SideDrawer.module.css
+++ b/src/Components/Header/SideDrawer/SideDrawer.module.css
@@ -6,12 +6,14 @@
     left: 0;
     top: 0;
     z-index: 200;
-    background-color: white;
-    padding: 32px 16px;
+    background-color: #30336b;
     box-sizing: border-box;
+    border-right: 2px solid rgba(200, 200, 200, 0.3);
     transition: transform 0.3s ease-out;
 }
-
+nav{
+    margin: 0;
+}
 @media (min-width: 600px) {
     .SideDrawer {
         display: none;
