--- a/src/containers/NewBook/NewBook.module.css
+++ b/src/containers/NewBook/NewBook.module.css
@@ -22,6 +22,7 @@
     margin-bottom: 10px;
     width: 100%;
     margin: 0 auto;
+    box-sizing: border-box;
 }
 .BookImage {
     width: 100%;
@@ -29,7 +30,7 @@
 }
 .BookImage img {
     max-width: 100%;
-    max-height:350px;
+    max-height: 350px;
     border-radius: 8px;
 }
 
@@ -52,15 +53,16 @@
     font-size: 12px;
 }
 
+
 .BookInfo input:focus {
-    outline: 0;
+    outline: none;
     border-color: #777;
 }
 .Container button {
     cursor: pointer;
-    background-color: #3498db;
-    border: 2px solid #3498db;
-    border-radius: 4px;
+    background-color: #c210c2;
+    border: 2px solid #c210c2;
+    border-radius: 5px;
     color: #fff;
     display: block;
     font-size: 16px;
@@ -70,6 +72,9 @@
     width: 200px;
     left: 50%;
     transform: translateX(-50%);
+}
+.Container button:focus {
+    outline: none;
 }
 
 @media (max-width: 600px) {
