--- a/src/Components/Book/Book.module.css
+++ b/src/Components/Book/Book.module.css
@@ -1,22 +1,62 @@
-.Book {
-    width: 275px;
-    padding: 16px;
-    text-align: center;
-    justify-content: center;
-    border: 1px solid #eee;
-    box-shadow: 0 2px 3px #ccc;
+.FlipCard {
     margin: 10px;
-    box-sizing: border-box;
     cursor: pointer;
+    background-color: transparent;
+    box-sizing: border-box;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
 }
-.Book img {
-    width: 250px;
+
+.FlipCard img {
+    width: 300px;
     height: 250px;
     margin: auto;
-
+}
+.FlipCard h3 {
+    font-size: 14px;
+    color: black;
+    text-transform: uppercase;
+    position: relative;
+    margin-top: 5px;
 }
 
-.Book:hover,
+.FlipCardInner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.FlipCard:hover .FlipCardInner {
+    transform: rotateY(180deg);
+}
+
+.FlipCardFront,
+.FlipCardBack {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.FlipCardFront {
+    background-color:transparent;
+    box-shadow: 4px rgba(0, 0, 0, 0.2);
+    color: black;
+}
+
+.FlipCardBack {
+    background-color: rgb(138, 120, 189);
+    color: white;
+    transform: rotateY(180deg);
+}
+
+/* .Book:hover,
 .Book:active {
     background-color: #c0ddf5;
 }
@@ -24,4 +64,4 @@
 .Author {
     margin: 16px 0;
     color: #ccc;
-}
+} */
