--- a/src/containers/NewBook/NewBook.module.css
+++ b/src/containers/NewBook/NewBook.module.css
@@ -1,5 +1,5 @@
 .Container {
-    width: 80%;
+    width: 90%;
     margin: 72px auto;
     height: auto;
     padding: 0 40px;
@@ -15,10 +15,10 @@
     column-gap: 20px;
     margin: 32px auto;
 }
-.NewBook h1 {
+.Container h1 {
     display: block;
     text-align: center;
-    margin: 0 0 20px;
+    margin: 24px 0 20px;
 }
 .BookInfos {
     margin-bottom: 10px;
@@ -84,9 +84,26 @@
 }
 
 @media (max-width: 600px) {
+    .Container {
+        width: 95%;
+        margin: 72px auto;
+        height: auto;
+        padding: 0 40px;
+        border: 1px solid #eee;
+        box-shadow: 0 2px 3px #ccc;
+        text-align: center;
+    }
     .NewBook {
         display: flex;
         flex-direction: column;
         margin-top: 20px;
     }
+    .Spinner h2 {
+        margin: 32px 0;
+    }
+    .Mobile td button {
+        margin:  0 ;
+
+    }
+
 }
