--- a/src/containers/Books/Books.module.css
+++ b/src/containers/Books/Books.module.css
@@ -1,7 +1,24 @@
+.Container {
+    margin: 80px auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
 .Books {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     width: 80%;
-    margin: 88px auto;
+    margin: auto;
+}
+
+.Filters {
+    display: flex;
+    justify-content: center;
+    flex-flow: row;
+    margin-bottom: 32px;
+}
+.Filters button {
+    margin: 0 8px;
 }
