--- a/src/containers/Books/Books.module.css
+++ b/src/containers/Books/Books.module.css
@@ -3,14 +3,22 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    width: auto;
+}
+.OutterCard {
+    margin: 12px auto;
+    box-sizing: border-box;
+}
+.OutterCard:hover {
+    text-decoration: none;
 }
 
 .Books {
-    display: flex;
-    flex-flow: row wrap;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 10px;
     justify-content: center;
-    width: 80%;
-    margin: auto;
+    margin: 0 auto;
 }
 
 .Filters {
@@ -19,6 +27,55 @@
     flex-flow: row;
     margin-bottom: 32px;
 }
+.FiltersControl{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-flow: row wrap;
+}
+.Button{
+    color: #c210c2;
+    padding: 8px 16px;
+    border: 0;
+    background-color: transparent;
+}
+
+.Button:hover{
+    font-weight: bold;
+}
+.Button:focus{
+    outline: none;
+}
 .Filters button {
     margin: 0 8px;
+}
+
+@media (max-width: 920px) {
+    .Books {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 10px;
+        justify-content: center;
+        margin: auto;
+    }
+}
+
+@media (max-width: 720px) {
+    .Books {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 10px;
+        justify-content: center;
+        margin: auto;
+    }
+}
+
+@media (max-width: 500px) {
+    .Books {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        column-gap: 10px;
+        justify-content: center;
+        margin: auto;
+    }
 }
