responsive css, insert comments render

--- a/src/containers/Books/Books.module.css
+++ b/src/containers/Books/Books.module.css
@@ -34,7 +34,7 @@
     flex-flow: row wrap;
 }
 .Button{
-    color: #c210c2;
+    color: #777;
     padding: 8px 16px;
     border: 0;
     background-color: transparent;
