--- a/src/containers/FullBook/FullBook.module.css
+++ b/src/containers/FullBook/FullBook.module.css
@@ -6,7 +6,9 @@
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     text-align: center;
+    align-items: baseline;
 }
+
 .Book {
     display: grid;
     align-items: center;
@@ -16,27 +18,27 @@
     margin: 32px auto;
 }
 
-.img img {
-    max-width: 100%;
-    max-height: auto;
-    border-radius: 8px;
-}
-
 .BookInfos {
-    margin-bottom: 10px;
+    margin: auto;
     width: 100%;
-    margin: 0 auto;
-    box-sizing: border-box;
+    margin: 12px auto;
     display: flex;
     flex-direction: column;
 }
 .BookInfo {
     display: flex;
-    justify-content: space-between;
-    padding: 12px;
-    border-bottom: 1px solid #777;
-    align-items: baseline;
-    text-align: center;
+    flex-direction: column;
+    padding: 4px;
+
+    align-items: start;
+}
+.BookInfo h4,
+.BookInfo p {
+    display: block;
+}
+
+.BookInfo p {
+    color: #777;
 }
 
 .BookImage {
@@ -44,16 +46,114 @@
     height: 100%;
 }
 .BookImage img {
+    position: relative;
     max-width: 100%;
-    max-height: 350px;
+    max-height: 450px;
     border-radius: 8px;
 }
+.CommentsContainer {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    margin: 0 auto 24px auto ;
+    text-align: center;
+}
 
+.CommentsContainer button {
+    text-align: center;
+    margin: 0 auto 24px auto;
+    width: 200px;
+    padding: 8px;
+    cursor: pointer;
+    background-color: #c210c2;
+    border: 2px solid #c210c2;
+    border-radius: 5px;
+    color: #fff;
+}
+.inputName label {
+    color: #777;
+    margin-bottom: 5px;
+    display: block;
+    text-align: start;
+}
+.CommentsContainer input {
+    resize: none;
+    width: 100%;
+    margin: 0 auto;
+    padding: 4px;
+    border: 2px solid #f0f0f0;
+    border-radius: 4px;
+    font-size: 14px;
+    margin-bottom: 12px;
+}
+
+.CommentsContainer textarea {
+    resize: none;
+    width: 100%;
+    height: 72px;
+    margin: 0 auto;
+    padding: 0 4px;
+    border: 2px solid #f0f0f0;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.CommentArea {
+    display: flex;
+    flex-direction: column;
+}
+
+.SingleComment {
+    width: 100%;
+    margin: 12px 0;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+}
+.DateAndName {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+}
+.DateAndName span {
+    display: block;
+    right: 0;
+    padding: 12px;
+    font-size: 14px;
+}
+
+.TextComment {
+    text-align: justify;
+    padding: 12px;
+    width: 90%;
+    margin: auto;
+}
+
+.TextComment p {
+    margin: 0;
+    font-size: 14px;
+}
 
 @media (max-width: 600px) {
+    .Book {
+        margin-top: 20px;
+    }
+}
+
+@media (max-width: 600px) {
+}
+@media (max-width: 900px) {
+    .CommentsContainer {
+        width: 100%;
+        margin: 0 auto 24px auto;
+        text-align: center;
+    }
     .Book {
         display: flex;
         flex-direction: column;
         margin-top: 20px;
+    }
+    .BookInfo {
+        align-items: center;
     }
 }
